changed the app name in docker

--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
 
   mongodb:
     image: mongo:6.0
-    container_name: covvee
+    container_name: covvee-app
     env_file:
       - .env
     environment:
